# sqlalchemy-loadump

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
examples/: dump_example.db  load_example.db  load_example.json
src/sqlalchemy_loadump/: __main__.py  cli.py  dumper.py  exporter_switcher.py  importer_switcher.py  loader.py  version.py
src/sqlalchemy_loadump/exporter/: exporter.py  json_exporter.py
src/sqlalchemy_loadump/importer/: importer.py  json_importer.py
tests/: README.md  conftest.py  test_dumper.py
tests/docker/: docker-compose.yml
tests/docker/tester/: Dockerfile
tests/py_tests/: conftest.py  test_dumper.py  test_importer_exporter.py  test_loader.py
tests/py_tests/fixtures/: db_models_for_test.py  db_test_env.py  db_test_env_lifecycle.py  transaction.py  utils.py
tests/py_tests/fixtures/mssql/: db_models.py  db_test_env_lifecycle.py
tests/py_tests/fixtures/postgres/: db_models.py  db_test_env_lifecycle.py
tests/py_tests/fixtures/sqlite3/: db_models.py  db_test_env_lifecycle.py
